unpackaged/main/default/objects/Account/fields/Finance_Vendor_Approval_Reject_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Vendor_Approval_Reject_Notes__c</fullName>
    <description>Reason Vendor was rejected by finance team</description>
    <inlineHelpText>Reason Vendor was rejected by finance team</inlineHelpText>
    <label>Finance Vendor Approval/Reject Notes</label>
    <type>TextArea</type>
</CustomField>