unpackaged/main/default/objects/Account/fields/VenApStat__c.field-meta.xml
<CustomField>
    <fullName>VenApStat__c</fullName>
    <description>Determines if vendor form needs to be submitted by vendor</description>
    <formula>IF(ISBLANK(VndLstQ__c),&quot;Not Qualified&quot;  ,
IF(VndLstQ__c &lt;= (TODAY() - 365)  , &quot;Not Fresh&quot;,
&quot;Approved&quot;))


/*IF(ISBLANK(VndLstQ__c)&amp;&amp; !ISPICKVAL( Type ,&quot;Hotel/Motel&quot;),&quot;Not Qualified&quot;  ,
IF(VndLstQ__c &lt;= (TODAY() - 365) &amp;&amp; !ISPICKVAL( Type ,&quot;Hotel/Motel&quot;) , &quot;Not Fresh&quot;,
&quot;Approved&quot;))*/

/*TEXT(((YEAR(VndLstQ__c) - YEAR(TODAY()))*12) - (MONTH(VndLstQ__c) - MONTH(TODAY())))*/

/*VndLstQ__c &lt;= (TODAY() - 180)*/</formula>
    <inlineHelpText>Determines if vendor form needs to be submitted by vendor</inlineHelpText>
    <label>Legal Vendor Approved Status</label>
    <type>Text</type>
</CustomField>