unpackaged/main/default/objects/Account/fields/VenApStatFin__c.field-meta.xml
<CustomField>
    <fullName>VenApStatFin__c</fullName>
    <description>The last date a vendor was approved or auto-approved by finance</description>
    <formula>IF(ISBLANK( VndLstQFin__c ),&quot;Not Qualified&quot; ,
IF(VndLstQFin__c &lt;= (TODAY() - 365)  , &quot;Not Fresh&quot;,
&quot;Approved&quot;))

/* NEED TO REMOVE HOTEL MOTEL TYPE AND JUST RELY ON DATE*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The last date a vendor was approved or auto-approved by finance</inlineHelpText>
    <label>Finance Vendor Approved Status</label>
    <type>Text</type>
</CustomField>