unpackaged/main/default/objects/Account/fields/VndLstQ__c.field-meta.xml
<CustomField>
    <fullName>VndLstQ__c</fullName>
    <description>The last time this vendor was qualified by Legal</description>
    <inlineHelpText>The last time this vendor was qualified by Legal</inlineHelpText>
    <label>Vendor Last Qualified Legal</label>
    <type>Date</type>
</CustomField>