unpackaged/main/default/objects/Account/fields/VndLstQFin__c.field-meta.xml
<CustomField>
    <fullName>VndLstQFin__c</fullName>
    <description>The last time this vendor was qualified by Legal</description>
    <inlineHelpText>The last time this vendor was qualified by Legal</inlineHelpText>
    <label>Vendor Last Qualified Finance</label>
    <type>Date</type>
</CustomField>